20031107 accessor.pl, snap_accessors.txt, szx.c, z80.c: add support for
	 the 'last instruction EI' flag.
20031127 A bunch of --enable-warnings tidy-ups.
20031214 make-perl.c, myglib.c: add g_slist_prepend to the glib emulation
	 layer (Marek).
20031228 libspectrum.c, libspectrum.h.in: rename 'class' to
	 'libspectrum_class' where its used in libspectrum.h.in for C++
	 safety (Fred).
20040109 bzip2.c, configure.in: check we have libbz2 1.x (0.9.x and
	 earlier use different function names).
20040111 bzip2.c: #include <stdio.h>: needed by libbz2 < 1.0.2.
20040113 hacking/cvs-tags: Add documentation of libspectrum's CVS tags.
20040113 TAG: libspectrum_0_2_1-trunk
	 BRANCH: libspectrum_0_2_1-branch
20040113 Makefile.am, configure.in: bump version number to 0.2.1pre1 and
	 update the library soname (libspectrum_0_2_1-branch).
20040114 ChangeLog: bring up to date.
20040117 TAG: libspectrum_0_2_1pre1 (libspectrum_0_2_1-branch).
20040126 libspectrum.c: replace HAVE_BZLIB_H with HAVE_LIBBZ2 as used
	 since the 20040109 change (patch #884231)
	 (libspectrum_0_2_1-branch) (Fred).
20040126 dck.c, libspectrum.h.in: support compressed .dck files (patch
	 #884355) (libspectrum_0_2_1-branch) (Fred).
20040127 configure.in: use glib 2.x if available
	 (libspectrum_0_2_1-branch).
20040129 libspectrum.c: prevent the 'Secure memory is not locked into
	 core' message appearing (libspectrum_0_2_1-branch).
20040205 Makefile.am, README, configure.in, doc/: doc updates
	 (libspectrum_0_2_1-branch).
20040205 configure.in: bump version number to 0.2.1pre2
	 (libspectrum_0_2_1-branch).
20040205 TAG: libspectrum_0_2_1pre2 (libspectrum_0_2_1-branch)
20040211 configure.in: bump version number to 0.2.1
	 (libspectrum_0_2_1-branch).
20040211 tzx_read.c: don't double step over count when reading select
	 blocks (libspectrum_0_2_1-branch).
20040212 TAG: libspectrum_0_2_1 (libspectrum_0_2_1-branch).
20040223 Merge changes from libspectrum_0_2_1 to HEAD.
20040223 TAG: libspectrum-0_2_1-merge-1