@@ -70,6 +70,7 @@ static timings_t base_timings[] = {
   { 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 },			  /* Unknown machine */
   { 3500000,       0, 24, 128, 24, 48, 48, 192, 48, 24, 14336 }, /* 16K */
   { 3528000, 1764750, 24, 128, 24, 48, 48, 192, 48, 27, 14336 }, /* TC2068 */
+  { 3546900, 1773400, 24, 128, 32, 40, 48, 192, 48, 24, 14336 }, /* Scorpion */
 };
 
 libspectrum_dword
