@@ -167,3 +167,5 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 20040212 TAG: libspectrum_0_2_1 (libspectrum_0_2_1-branch).
 20040223 Merge changes from libspectrum_0_2_1 to HEAD.
 20040223 TAG: libspectrum-0_2_1-merge-1
+20040227 accessor.pl,libspectrum.c,libspectrum.h.in,szx.c,timings.c,z80.c:
+	 Scorpion support (part of patch #874504) (Stuart Brady).
